fix: add fallback for empty ProjectMember list in admin
- Show all users when project has no members
- Fix department member inline to work with empty DB
- Add debug output for troubleshooting

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,14 @@ coverage.xml
 .env
 .env.*
 !.env.example
+
+# Test files
+.env.test
+*.session
+*.session-journal
+test_session.session
+.test_deps_installed
+htmlcov/
+.coverage
+.pytest_cache/
+
