--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,12 @@
 name: Tests
 on: [push, pull_request, workflow_dispatch]
-
 jobs:
   unit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: docker-compose up -d
+      - run: docker version && docker compose version
+      - run: docker compose up -d
       - run: ./scripts/run_tests.sh unit
 
   integration:
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: docker-compose up -d
+      - run: docker version && docker compose version
+      - run: docker compose up -d
       - run: ./scripts/run_tests.sh integration
 
   e2e-telegram:
@@ -32,7 +33,8 @@ jobs:
       TEST_GROUP_WITH_TOPICS_ID: ${{ secrets.TEST_GROUP_WITH_TOPICS_ID }}
     steps:
       - uses: actions/checkout@v4
-      - run: docker-compose up -d
+      - run: docker version && docker compose version
+      - run: docker compose up -d
       - name: Create .env.test
         run: |
           cat > .env.test <<'EOF'
